<package format="2">
  <name>f3_v3_r3</name>
  <version>0.0.1</version>
  <description>This package provides launch file for operating f3_v3_r3</description>

  <license>Apache 2.0</license>

  <url type="website">http://wiki.ros.org/</url>


  <maintainer email="jane.doe@example.com">Jane Doe</maintainer>
  <author email="jane.doe@example.com">Jane Doe</author>


  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>move_base</exec_depend>
  <test_depend>roslaunch</test_depend>

</package>