<?xml version="1.0"?>
<package format="2">
    <name>metacontrol_move_base_configurations</name>
    <version>0.0.1</version>
    <description>Meta package for metacontrol_move_base_configurations </description>

    <license>Apache 2.0</license>
    <url type="website">http://wiki.ros.org/</url>
    <maintainer email="jane.doe@example.com">Jane Doe</maintainer>
    <author email="jane.doe@example.com">Jane Doe</author>

    <buildtool_depend>catkin</buildtool_depend>
    <exec_depend>f1_v1_r1</exec_depend>
    <exec_depend>f1_v1_r2</exec_depend>
    <exec_depend>f1_v1_r3</exec_depend>
    <exec_depend>f1_v2_r1</exec_depend>
    <exec_depend>f1_v2_r2</exec_depend>
    <exec_depend>f1_v2_r3</exec_depend>
    <exec_depend>f1_v3_r1</exec_depend>
    <exec_depend>f1_v3_r2</exec_depend>
    <exec_depend>f1_v3_r3</exec_depend>
    <exec_depend>f2_v1_r1</exec_depend>
    <exec_depend>f2_v1_r2</exec_depend>
    <exec_depend>f2_v1_r3</exec_depend>
    <exec_depend>f2_v2_r1</exec_depend>
    <exec_depend>f2_v2_r2</exec_depend>
    <exec_depend>f2_v2_r3</exec_depend>
    <exec_depend>f2_v3_r1</exec_depend>
    <exec_depend>f2_v3_r2</exec_depend>
    <exec_depend>f2_v3_r3</exec_depend>
    <exec_depend>f3_v1_r1</exec_depend>
    <exec_depend>f3_v1_r2</exec_depend>
    <exec_depend>f3_v1_r3</exec_depend>
    <exec_depend>f3_v2_r1</exec_depend>
    <exec_depend>f3_v2_r2</exec_depend>
    <exec_depend>f3_v2_r3</exec_depend>
    <exec_depend>f3_v3_r1</exec_depend>
    <exec_depend>f3_v3_r2</exec_depend>
    <exec_depend>f3_v3_r3</exec_depend>
</package>
